--- a/methanextrade.com/dashboard/deposit.html
+++ b/methanextrade.com/dashboard/deposit.html
@@ -1059,9 +1059,9 @@
                 <!-- begin panel -->
                 <div class="panel panel-inverse">
                     <!-- begin panel-heading -->
-                     <div style="display: flex;align-items: end; justify-content: end;"> 
+                     <!-- <div style="display: flex;align-items: end; justify-content: end;"> 
                      <a class="btn  mb-2" style="background-color: orange; color:#fff" href="wallet.html">Connect Wallet</a>
-                    </div>
+                    </div> -->
                     <div class="panel-heading ui-sortable-handle">
                         <h4 class="panel-title">SELECT PAYMENT AND ENTER AMOUNT</h4>
                     </div>
