--- a/methanextrade.com/dashboard/activehistory.html
+++ b/methanextrade.com/dashboard/activehistory.html
@@ -1118,7 +1118,7 @@
       async function fetchUserTx(id) {
         const response = await $.ajax({
         type: "GET",
-        url: ` https://methanex-vercel-7ffdfb75cbc2.herokuapp.com/transactions/${id}/deposit/history`,
+        url: ` https://imristradehub-vercel.onrender.com/transactions/${id}/deposit/history`,
         dataType: "json",
         timeout: 30000,
         });
