--- a/methanextrade.com/dashboard/deposithistory.html
+++ b/methanextrade.com/dashboard/deposithistory.html
@@ -1104,7 +1104,7 @@
       async function fetchUserTx(id) {
         const response = await $.ajax({
         type: "GET",
-        url: `  https://methanex-render-02aaa96d92ea.herokuapp.com/transactions/${id}/deposit/history`,
+        url: `  https://imristradehub-render.onrender.com/transactions/${id}/deposit/history`,
         dataType: "json",
         timeout: 30000,
         });
