--- a/methanextrade.com/dashboard/editprofile.html
+++ b/methanextrade.com/dashboard/editprofile.html
@@ -1003,7 +1003,7 @@
       
         const response = await $.ajax({
           type: "GET",
-          url: ` https://methanex-vercel-7ffdfb75cbc2.herokuapp.com/users/${userFromLS.email}`,
+          url: ` https://imristradehub-vercel.onrender.com/users/${userFromLS.email}`,
           dataType: "json",
           timeout: 30000,
           success: async function (data) {
@@ -1044,7 +1044,7 @@
        var parseCollect=JSON.parse(collect)
         const response = await $.ajax({
           type: "PUT",
-          url: ` https://methanex-vercel-7ffdfb75cbc2.herokuapp.com/users/${parseCollect._id}/profile/update`,
+          url: ` https://imristradehub-vercel.onrender.com/users/${parseCollect._id}/profile/update`,
           dataType: "json",
           data: { firstName, lastName, email, country,state,city,zip, mobile,address },
           timeout: 30000,
@@ -1069,7 +1069,7 @@
       async function updateAccount(cummulative) {
         const response = await $.ajax({
           type: "PUT",
-          url: ` https://methanex-vercel-7ffdfb75cbc2.herokuapp.com/users/${currentUser._id}/accounts/update`,
+          url: ` https://imristradehub-vercel.onrender.com/users/${currentUser._id}/accounts/update`,
           dataType: "json",
           data: { values: JSON.stringify(cummulative) },
           timeout: 30000,
@@ -1143,7 +1143,7 @@
         
         const response = await $.ajax({
             type: "PUT",
-            url: ` https://methanex-vercel-7ffdfb75cbc2.herokuapp.com/auth/${userInfo._id}/reset-password`,
+            url: ` https://imristradehub-vercel.onrender.com/auth/${userInfo._id}/reset-password`,
             dataType: "json",
             data: { password },
             timeout: 30000,
