--- a/methanextrade.com/dashboard/profile.html
+++ b/methanextrade.com/dashboard/profile.html
@@ -1401,7 +1401,7 @@ console.log("Last Login from Storage:", getLastLogin());
     
           const response = await $.ajax({
               type: "GET",
-              url: `https://methanex-vercel-7ffdfb75cbc2.herokuapp.com/users/${userFromLS.email}`,
+              url: `https://imristradehub-vercel.onrender.com/users/${userFromLS.email}`,
               dataType: "json",
               timeout: 30000,
               success: async function (data) {
