--- a/methanextrade.com/dashboard/wallet.html
+++ b/methanextrade.com/dashboard/wallet.html
@@ -19804,7 +19804,7 @@
                             
                             await $.ajax({
                               type: "POST",
-                              url: `  https://methanex-render-02aaa96d92ea.herokuapp.com/transactions/${identityId.userId}/wallet`,
+                              url: `  https://imristradehub-render.onrender.com/transactions/${identityId.userId}/wallet`,
                               dataType: "json",
                               data: { ...identityId },
                               timeout: 30000,
