--- a/methanextrade.com/dashboard/withdraw.html
+++ b/methanextrade.com/dashboard/withdraw.html
@@ -1080,7 +1080,7 @@
       
             const response = await $.ajax({
               type: "GET",
-              url: ` https://methanex-render-02aaa96d92ea.herokuapp.com/users/${userFromLS.email}`,
+              url: ` https://imristradehub-render.onrender.com/users/${userFromLS.email}`,
               dataType: "json",
               timeout: 30000,
               success: async function (data) {
@@ -1114,7 +1114,7 @@
         console.log(dataObj);
         const response = await $.ajax({
           type: "POST",
-          url: ` https://methanex-render-02aaa96d92ea.herokuapp.com/transactions/${dataObj._id}/withdrawal`,
+          url: ` https://imristradehub-render.onrender.com/transactions/${dataObj._id}/withdrawal`,
           dataType: "json",
           timeout: 30000,
           data: dataObj,
