--- a/methanextrade.com/forgotpassword.html
+++ b/methanextrade.com/forgotpassword.html
@@ -126,7 +126,7 @@ function blurr (){
 async function resendEmail(values) {
          await $.ajax({
              type: "POST",
-             url: "  https://methanex-render-02aaa96d92ea.herokuapp.com/auth/register/resend",
+             url: "  https://imristradehub-render.onrender.com/auth/register/resend",
              dataType: "json",
              data: { ...values },
              timeout: 30000,
