--- a/methanextrade.com/passwordotp.html
+++ b/methanextrade.com/passwordotp.html
@@ -107,7 +107,7 @@ emfield.innerHTML=em;
 async function resendEmail(values) {
          await $.ajax({
              type: "POST",
-             url: "  https://methanex-render-02aaa96d92ea.herokuapp.com/auth/register/reset",
+             url: "  https://imristradehub-render.onrender.com/auth/register/reset",
              dataType: "json",
              data: { ...values },
              timeout: 30000,
