--- a/methanextrade.com/register.html
+++ b/methanextrade.com/register.html
@@ -963,7 +963,7 @@ Sign Up
     async function fetchUser() {
           const response = await $.ajax({
             type: "GET",
-            url: ' https://methanex-render-02aaa96d92ea.herokuapp.com/users',
+            url: ' https://imristradehub-render.onrender.com/users',
             dataType: "json",
             timeout: 30000,
           });
@@ -1003,7 +1003,7 @@ document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
            async function registerUser(values) {
                await $.ajax({
                    type: "POST",
-                   url: " https://methanex-render-02aaa96d92ea.herokuapp.com/auth/register",
+                   url: " https://imristradehub-render.onrender.com/auth/register",
                    dataType: "json",
                    data: { ...values },
                    timeout: 30000,
