--- a/methanextrade.com/dashboard/bnb.html
+++ b/methanextrade.com/dashboard/bnb.html
@@ -914,7 +914,7 @@
                 <div class="topper">
                     <div class="invoice-from text-center pt-0 pb-2">
                         <address class="m-t-5 mb-0">
-                            <img id="coin_payment_image" src="./usdt.png"  width="50" height="50">
+                            <img id="coin_payment_image" src="./bnb.png"  width="50" height="50">
                             <div></div>
                         </address>
                     </div>
@@ -932,7 +932,7 @@
                                 </h4>
                                 <br>
                                     <div class="input-group">
-                                        <input id="reflink" type="text" class="form-control" value="TF1u9iFENsUCiNyVVzqbtoEtmsyZQ18YfP" readonly="">
+                                        <input id="reflink" type="text" class="form-control" value="0x7e2E54C52D409FD0338D7E88c33B248f6cAE82cf" readonly="">
                                         <span style="cursor: pointer;" onclick="copy()" class="input-group-append">
                                             <button class="btn btn-inverse">
                                                 <i class="far fa-clone" aria-hidden="true"></i>
@@ -953,7 +953,7 @@
                                     address<br>After your wallet address have been generated,<br>
                                     copy the wallet and fund your account through our secure payment vendor prompt
                                     <div class="input-group">
-                                        <input id="reflink" type="text" class="form-control" value="TF1u9iFENsUCiNyVVzqbtoEtmsyZQ18YfP" readonly="">
+                                        <input id="reflink" type="text" class="form-control" value="0x7e2E54C52D409FD0338D7E88c33B248f6cAE82cf" readonly="">
                                         <span style="cursor: pointer;" onclick="copy()" class="input-group-append">
                                             <button class="btn btn-inverse">
                                                 <i class="far fa-clone" aria-hidden="true"></i>
@@ -999,7 +999,7 @@
                                     <td class="text-left">$<span  id="depositing"></span></td>
                                 </tr>
                                 <tr>
-<td>                             <span class="text-white"><b>Network</b></span>: <span id="method">USDT(trc20)</span>
+<td>                             <span class="text-white"><b>Network</b></span>: <span id="method">BNB</span>
 </td>
     
                                     <!-- <td>
