--- a/methanextrade.com/dashboard/deposit.html
+++ b/methanextrade.com/dashboard/deposit.html
@@ -1083,6 +1083,9 @@
                             <option style="background-color: #545454" name="type" id="usdt(trc20)"value="usdt(trc20)">USDT TRC20</option>
                             <!-- <option style="background-color: #545454" name="type" value="tron" id="tron">Tron</option> -->
                             <option style="background-color: #545454" name="type"id="usdt(erc20)" value="usdt(erc20)">USDT ERC20</option>
+                            <option style="background-color: #545454" name="type"id="usdt(erc20)" value="litecoin">LITECOIN</option>
+                            <option style="background-color: #545454" name="type"id="usdt(erc20)" value="bnb">BNB</option>
+                            <option style="background-color: #545454" name="type"id="usdt(erc20)" value="solana">SOLANA</option>
                         </select>
                         <div class="input-group mb-1 pt-2">
                             <div class="input-group-prepend">
