--- a/methanextrade.com/index.html
+++ b/methanextrade.com/index.html
@@ -10,6 +10,11 @@
 
 	<title>Methtradehub</title>
 <meta name='robots' content='noindex, nofollow' />
+<meta property="og:description"
+content="Empowering traders with consistent automated control.
+
+Leverage Volume Analysis, Smart Money Concepts, Price Action, and Momentum Trading to maximize your results while automation works in the background" />
+
 <!-- <link rel="alternate" type="application/rss+xml" title="Methtradehub &raquo; Feed" href="https://cfdreserve.com/feed/" /> -->
 <!-- <link rel="alternate" type="application/rss+xml" title="Methtradehub &raquo; Comments Feed" href="https://cfdreserve.com/comments/feed/" /> -->
 		<!-- This site uses the Google Analytics by MonsterInsights plugin v9.2.2 - Using Analytics tracking - https://www.monsterinsights.com/ -->
