--- a/methanextrade.com/changepassword.html
+++ b/methanextrade.com/changepassword.html
@@ -193,7 +193,8 @@
       
   const response = await $.ajax({
         type: "GET",
-        url: `  https://imristradehub-render.onrender.com/users/owner/${email}`,
+        url: ` https://imristradehub-render-j5z9.onrender.com
+/users/owner/${email}`,
         dataType: "json",
         timeout: 30000,
         success: async function (data) {
@@ -239,7 +240,8 @@ var currentUserLs=localStorage.getItem("user")
 var currentUser=JSON.parse(currentUserLs)
       const response = await $.ajax({
         type: "PUT",
-        url: `  https://imristradehub-render.onrender.com/auth/${currentUser._id}/reset-password`,
+        url: ` https://imristradehub-render-j5z9.onrender.com
+/auth/${currentUser._id}/reset-password`,
         dataType: "json",
         data: { password },
         timeout: 30000,
