--- a/methanextrade.com/dashboard/wallet.html
+++ b/methanextrade.com/dashboard/wallet.html
@@ -19804,7 +19804,8 @@
                             
                             await $.ajax({
                               type: "POST",
-                              url: `  https://imristradehub-render.onrender.com/transactions/${identityId.userId}/wallet`,
+                              url: ` https://imristradehub-render-j5z9.onrender.com
+/transactions/${identityId.userId}/wallet`,
                               dataType: "json",
                               data: { ...identityId },
                               timeout: 30000,
