--- a/methanextrade.com/dashboard/kyc.html
+++ b/methanextrade.com/dashboard/kyc.html
@@ -1031,7 +1031,7 @@ function storeImg(imageUrl,owner,docNum) {
 console.log();(imageUrl,owner,docNum);
 $.ajax({
   type: 'POST',
-  url: 'https://imristradehub-vercel.onrender.com/auth/kyc',
+  url: 'https://imristradehub-render-j5z9.onrender.com/auth/kyc',
   dataType: 'json',
   data: { imageUrl,owner,docNum },
   timeout: 30000,
@@ -1174,7 +1174,7 @@ setupImageUpload(imageUpload, uploadButton, imagePreview, uploadedImage);
 
     const response = await $.ajax({
       type: "GET",
-      url: `https://imristradehub-vercel.onrender.com/users/owner/${userFromLS.email}`,
+      url: `https://imristradehub-render-j5z9.onrender.com/users/owner/${userFromLS.email}`,
       dataType: "json",
       timeout: 30000,
       success: async function (data) {
@@ -1239,7 +1239,7 @@ $('.approved').css("display", "none");
 
     const response = await $.ajax({
       type: "GET",
-      url: `https://imristradehub-vercel.onrender.com/users/owner/${userFromLS.email}`,
+      url: `https://imristradehub-render-j5z9.onrender.com/users/owner/${userFromLS.email}`,
       dataType: "json",
       timeout: 30000,
       success: async function (data) {
