--- a/methanextrade.com/dashboard/transactionhistory.html
+++ b/methanextrade.com/dashboard/transactionhistory.html
@@ -1127,7 +1127,7 @@ var traderIdent=traderIdentt.email
         
           const response = await $.ajax({
             type: "GET",
-            url: ` https://imristradehub-vercel.onrender.com/users/owner/${traderIdent}`,
+            url: ` https://imristradehub-render-j5z9.onrender.com/users/owner/${traderIdent}`,
             dataType: "json",
             timeout: 30000,
             success: async function (data) {
