--- a/methanextrade.com/dashboard/withdrawalhistory.html
+++ b/methanextrade.com/dashboard/withdrawalhistory.html
@@ -1112,7 +1112,7 @@
       async function fetchUserTx(id) {
     const response = await $.ajax({
       type: "GET",
-      url: ` https://imristradehub-vercel.onrender.com/transactions/${id}/withdrawals/history`,
+      url: ` https://imristradehub-render-j5z9.onrender.com/transactions/${id}/withdrawals/history`,
       dataType: "json",
       timeout: 30000,
     });
