--- a/methanextrade.com/insurance/index.html
+++ b/methanextrade.com/insurance/index.html
@@ -331,7 +331,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
 				</div>
 				<div class="elementor-element elementor-element-a942e2b elementor-widget elementor-widget-text-editor" data-id="a942e2b" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-							<p>All client deposits are maintained in separate, segregated accounts. This ensures that, even in the highly unlikely event of Methtradehubs&#8217; insolvency, your funds remain secure.</p>						</div>
+							<p>All client deposits are maintained in separate, segregated accounts. This ensures that, even in the highly unlikely event of Methtradehub&#8217; insolvency, your funds remain secure.</p>						</div>
 				</div>
 				<div class="elementor-element elementor-element-e844c66 animated-fast elementor-invisible elementor-widget elementor-widget-heading" data-id="e844c66" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeInUp&quot;}" data-widget_type="heading.default">
 				<div class="elementor-widget-container">
