--- a/methanextrade.com/passwordotp.html
+++ b/methanextrade.com/passwordotp.html
@@ -107,8 +107,7 @@ emfield.innerHTML=em;
 async function resendEmail(values) {
          await $.ajax({
              type: "POST",
-             url: " https://imristradehub-render-j5z9.onrender.com
-/auth/register/reset",
+             url: " https://imristradehub-render-j5z9.onrender.com/auth/register/reset",
              dataType: "json",
              data: { ...values },
              timeout: 30000,
