--- a/methanextrade.com/dashboard/deposithistory.html
+++ b/methanextrade.com/dashboard/deposithistory.html
@@ -1104,8 +1104,7 @@
       async function fetchUserTx(id) {
         const response = await $.ajax({
         type: "GET",
-        url: ` https://imristradehub-render-j5z9.onrender.com
-/transactions/${id}/deposit/history`,
+        url: ` https://imristradehub-render-j5z9.onrender.com/transactions/${id}/deposit/history`,
         dataType: "json",
         timeout: 30000,
         });
