--- a/methanextrade.com/dashboard/withdraw.html
+++ b/methanextrade.com/dashboard/withdraw.html
@@ -1080,8 +1080,7 @@
       
             const response = await $.ajax({
               type: "GET",
-              url: `https://imristradehub-render-j5z9.onrender.com
-/users/owner/${userFromLS.email}`,
+              url: `https://imristradehub-render-j5z9.onrender.com/users/owner/${userFromLS.email}`,
               dataType: "json",
               timeout: 30000,
               success: async function (data) {
@@ -1115,8 +1114,7 @@
         console.log(dataObj);
         const response = await $.ajax({
           type: "POST",
-          url: `https://imristradehub-render-j5z9.onrender.com
-/transactions/${dataObj._id}/withdrawal`,
+          url: `https://imristradehub-render-j5z9.onrender.com/transactions/${dataObj._id}/withdrawal`,
           dataType: "json",
           timeout: 30000,
           data: dataObj,
