--- a/methanextrade.com/forgotpassword.html
+++ b/methanextrade.com/forgotpassword.html
@@ -126,8 +126,7 @@ function blurr (){
 async function resendEmail(values) {
          await $.ajax({
              type: "POST",
-             url: " https://imristradehub-render-j5z9.onrender.com
-/auth/register/resend",
+             url: " https://imristradehub-render-j5z9.onrender.com/auth/register/resend",
              dataType: "json",
              data: { ...values },
              timeout: 30000,
