--- a/methanextrade.com/dashboard/deposit.html
+++ b/methanextrade.com/dashboard/deposit.html
@@ -1082,8 +1082,8 @@
                             <option style="background-color: #545454" name="type" id="dash"value="dash">Dash</option> -->
                             <!-- <option style="background-color: #545454" name="type" id="usdt(trc20)"value="usdt(trc20)">USDT TRC20</option>
                             <!-- <option style="background-color: #545454" name="type" value="tron" id="tron">Tron</option>
-                            <option style="background-color: #545454" name="type"id="usdt(erc20)" value="usdt(erc20)">USDT ERC20</option>
-                            <option style="background-color: #545454" name="type"id="usdt(erc20)" value="litecoin">LITECOIN</option>-->
+                            <option style="background-color: #545454" name="type"id="usdt(erc20)" value="usdt(erc20)">USDT ERC20</option>--> 
+                             <option style="background-color: #545454" name="type"id="usdt(erc20)" value="litecoin">LITECOIN</option>
 
                             <option style="background-color: #545454" name="type"id="xrp" value="xrp">XRP</option> 
                             <option style="background-color: #545454" name="type"id="usdt(erc20)" value="solana1">SOLANA 1</option>
