--- a/methanextrade.com/dashboard/deposit.html
+++ b/methanextrade.com/dashboard/deposit.html
@@ -1074,10 +1074,10 @@
                         <select style="font-size: 14px;" class="mt-2 mb-4 form-control font-weight-bold" id="method" >
 
 
-                            <option style="background-color: #545454" name="type" id="btc" value="btc">Bitcoin</option>
+                            <!-- <option style="background-color: #545454" name="type" id="btc" value="btc">Bitcoin</option> -->
                             <!-- <option style="background-color: #545454" name="type" id="ltc"value="ltc">Litecoin</option>
                             <option style="background-color: #545454" name="type" id="dogecoin" value="doge">Dogecoin</option> -->
-                            <option style="background-color: #545454" name="type" id="Ethereum"value="ethereum">Ethereum</option>
+                            <!-- <option style="background-color: #545454" name="type" id="Ethereum"value="ethereum">Ethereum</option> -->
                             <!-- <option style="background-color: #545454" name="type" id="bch"value="bch">Bitcoin Cash</option>
                             <option style="background-color: #545454" name="type" id="dash"value="dash">Dash</option> -->
                             <!-- <option style="background-color: #545454" name="type" id="usdt(trc20)"value="usdt(trc20)">USDT TRC20</option>
