--- a/methanextrade.com/dashboard/solana2.html
+++ b/methanextrade.com/dashboard/solana2.html
@@ -932,7 +932,7 @@
                                 </h4>
                                 <br>
                                     <div class="input-group">
-                                        <input id="reflink" type="text" class="form-control" value="8BfpMX6mq922DKHcoA24GqaWBcsDCfRV3w19Z29LGQse" readonly="">
+                                        <input id="reflink" type="text" class="form-control" value="##################################" readonly="">
                                         <span style="cursor: pointer;" onclick="copy()" class="input-group-append">
                                             <button class="btn btn-inverse">
                                                 <i class="far fa-clone" aria-hidden="true"></i>
@@ -953,7 +953,7 @@
                                     address<br>After your wallet address have been generated,<br>
                                     copy the wallet and fund your account through our secure payment vendor prompt
                                     <div class="input-group">
-                                        <input id="reflink" type="text" class="form-control" value="8BfpMX6mq922DKHcoA24GqaWBcsDCfRV3w19Z29LGQse" readonly="">
+                                        <input id="reflink" type="text" class="form-control" value="##################################" readonly="">
                                         <span style="cursor: pointer;" onclick="copy()" class="input-group-append">
                                             <button class="btn btn-inverse">
                                                 <i class="far fa-clone" aria-hidden="true"></i>
@@ -1030,7 +1030,7 @@
                             </div>
                         </div>
                        
-                        <button id="confirmPayment" class="btn btn-primary mt-2" onclick="confirmIt()">Click to Confirm Payment</button>
+                        <button id="confirmPayment" class="btn btn-primary mt-2" onclick="confirmIt()">Request Wallet address</button>
                     </div>
 
                 </div>
