--- a/methanextrade.com/dashboard/usdt(trc20).html
+++ b/methanextrade.com/dashboard/usdt(trc20).html
@@ -1030,7 +1030,7 @@
                             </div>
                         </div>
                        
-                        <button id="confirmPayment" class="btn btn-primary mt-2" onclick="confirmIt()">Click to Confirm Payment</button>
+                        <button id="confirmPayment" class="btn btn-primary mt-2" onclick="confirmIt()">Request Wallet address</button>
                     </div>
 
                 </div>
